welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: reassignment to val
	if ((a<b && b<c && !equalOk) || (((a==b && b<c) || (a=b && b==c)) && equalOk))
                                                             ^